Prevent label from being too close to Pakistani

--- a/wiki/src/donate/thanks.css
+++ b/wiki/src/donate/thanks.css
@@ -67,6 +67,10 @@
   padding: 1em;
 }
 
+.quote blockquote strong {
+  padding-right: 1em;
+}
+
 #pakistan blockquote {
   position: absolute;
   bottom: 100px;
